UPDATE: bump Node to 24.4.1, update major deps, strip bootstrap, rename App.scss to App.css, adjust test text, fix web‑vitals import, clean devDependencies ✔

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,4 @@
 
-@import 'bootstrap/scss/bootstrap.scss';
-
 header {
   padding: 1rem 0;
 }
@@ -19,8 +17,8 @@ header {
     }
 
     &:hover {
-      color: $white;
-      background-color: $green;
+      color: #fff;
+      background-color: #198754;
     }
   }
 
